Modified the build file to work with java 8